Borrowing code from legacy system and coding user time sheet view

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "grpc-web": "^1.5.0",
+    "moment-timezone": "^0.5.45",
     "nuxt": "^3.12.2",
     "vue": "^3.4.29",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vue-i18n": "^9.13.1",
+    "vuetify": "^3.6.0-beta.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
