--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
-APP_API_URL=http://192.168.1.50:3000
-VUE_APP_API_URL=http://localhost:3000/
+VITE_SRV_API_URL=http://127.0.0.1:8000
+VITE_APP_API_URL=https://localhost:8765/
 VUE_IMAGE_DIR=
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=fr
