--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.0.13",
     "process": "^0.11.10",
     "vee-validate": "^4.5.11",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.29",
     "vue-axios": "^3.5.2",
     "vue-i18n": "^9.13.1",
