--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
-# fastapi-users[beanie]
-uvicorn[standard]
-fastapi
-fastapi-users[sqlalchemy]
-aiosqlite
+fastapi==0.112.0
+fastapi_users==13.0.0
+fastapi_users_db_sqlalchemy==6.0.1
+pydantic==2.8.2
+SQLAlchemy==2.0.31
+uvicorn==0.30.5
+workalendar==17.0.0
